# django-mono-repo-example

./: .bazelrc  .gitignore  README.md  WORKSPACE  py_interpreter.bzl
projects/actnow/: BUILD.bazel  manage.py
projects/actnow/actnow/: BUILD.bazel  asgi.py  settings.py  urls.py  views.py  wsgi.py
projects/common/: BUILD.bazel
projects/common/src/: health.py  helpers.py  utils.py
projects/debunkbot/: BUILD.bazel  main.py
