load("@rules_python//python:defs.bzl", "py_binary")
load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
load("@io_bazel_rules_docker//container:container.bzl","container_image",)

py_binary(
    name="debunkbot",
    srcs=["main.py"],
    main="main.py",
    deps=[
        "//projects/common:common",
    ]
)

py3_image(
    name="debunkbot_img",
    srcs=["main.py"],
    main="main.py",
    deps=[":debunkbot"],
    base=":python3.10",
)

container_image(
    name="python3.10",
    visibility=["//visibility:public"],
    base="@python3.10-base//image",
    ports = [
        "8000",
    ],
    env={
        "PYTHONUNBUFFERED": "1",
    },
    symlinks={
        "/usr/bin/python": "/usr/local/bin/python",  # To work as base for py3_image
        "/usr/bin/python3": "/usr/local/bin/python3"  # To work as base for py3_image
    },
)
